# fluxum

./: .gitignore  .gitmodules  BYBIT_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  KRAKEN_REST_MODERNIZATION.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  README.md  UNIFIED_ARCHITECTURE.md  UNIFIED_COMPLETE.md  UNIFIED_PROGRESS.md  WEBSOCKET_TEST_REPORT.md  change.csv  dune  dune-project  dune-workspace  dune_mexc_test  fluxum.opam  test_ws_diagnosis.sh
app/: cli.ml  dune
examples/: README.md  backtest_example.ml  binance_orderbook.ml  bitrue_orderbook.ml  bitrue_orderbook_debug.ml  consolidated_orderbook.ml  consolidated_orderbook_arb.ml  consolidated_orderbook_enhanced.ml  dune  dydx_orderbook.ml  gemini_orderbook.ml  gemini_orderbook_curl.ml  hyperliquid_orderbook.ml  hyperliquid_testnet.ml  kraken_market_data.ml  kraken_orderbook.ml  kraken_orderbook_debug.ml  mexc_orderbook.ml
lib/: amm_pricing.ml  cli_args.ml  cli_args.mli  consolidated_balance.ml  consolidated_balance.mli  consolidated_order_book.ml  consolidated_order_book.mli  consolidated_pools.ml  consolidated_pools.mli  curl_ext.ml  curl_ext.mli  curl_ext_stubs.c  dune  exchange_intf.ml  exchange_intf.mli  fluxum.ml  fluxum.mli  json.ml  ledger_intf.ml  ledger_intf.mli  normalize_common.ml  normalize_common.mli  order_book_incremental.ml  order_book_incremental.mli  order_book_intf.ml  order_book_intf.mli  pool_common.ml  pool_common.mli  pool_intf.ml  pool_intf.mli  session_intf.ml  session_intf.mli  types.ml  types.mli  websocket_curl.ml  websocket_curl.mli  ws_health.ml
lib/analysis/: analysis.ml  bars.ml  bars.mli  dune  returns.ml  returns.mli  stats.ml  stats.mli
lib/analysis/test/: dune  test_analysis.ml
lib/backtest/: backtest.ml  backtest_result.ml  candle.ml  data_source.ml  dune  engine.ml  fill_model.ml  metrics.ml  strategy_intf.ml
lib/backtest/strategies/: backtest_strategies.ml  buy_and_hold.ml  dune  momentum.ml  sma_crossover.ml
lib/backtest/test/: dune  run_tests.ml
lib/bot/: bot.ml  dashboard.ml  dune  engine.ml  event.ml  event_store.ml  parquet_export.ml  state.ml  strategy_intf.ml
lib/bot/test/: dune  test_bot.ml
lib/ethereum/: abi.ml  dune  erc20.ml  ethereum.ml  multicall3.ml  rlp.ml  rpc.ml  tx.ml  wallet.ml  wallet.mli
lib/ethereum/test/: dune  test_wallet.ml
lib/exchange/: dune  integration_test_framework.ml
lib/exchange/aerodrome/: aerodrome.ml  cfg.ml  dune  pool_adapter.ml  rest.ml  types.ml
lib/exchange/balancer/: balancer.ml  cfg.ml  dune  pool_adapter.ml  rest.ml  types.ml
lib/exchange/binance/: binance.ml  cfg.ml  common.ml  dune  fluxum_adapter.ml  ledger.ml  market_data.ml  order_book.ml  rest.ml  sapi.ml  session.ml  signature.ml  unified_adapter.ml  v3.ml  ws.ml
lib/exchange/bitfinex/: bitfinex.ml  cfg.ml  dune  pool_adapter.ml  rest.ml  types.ml
lib/exchange/bitrue/: bitrue.ml  cfg.ml  dune  fluxum_adapter.ml  ledger.ml  market_data_curl.ml  order_book.ml  rest.ml  session.ml  unified_adapter.ml  unified_cmd.ml  ws.ml
lib/exchange/bitstamp/: bitstamp.ml  cfg.ml  dune  fluxum_adapter.ml  ledger.ml  order_book.ml  pool_adapter.ml  rest.ml  session.ml  types.ml  unified_adapter.ml  ws.ml
lib/exchange/bybit/: bybit.ml  cfg.ml  dune  fluxum_adapter.ml  ledger.ml  order_book.ml  rest.ml  session.ml  unified_adapter.ml  v5.ml  ws.ml
lib/exchange/camelot/: camelot.ml  cfg.ml  dune  pool_adapter.ml  rest.ml  types.ml
lib/exchange/coinbase/: cfg.ml  coinbase.ml  dune  fluxum_adapter.ml  ledger.ml  market_data.ml  order_book.ml  rest.ml  session.ml  signature.ml  unified_adapter.ml  ws.ml
lib/exchange/common/: auto_restart.ml  crypto.ml  dune  order_book_base.ml  order_book_base.mli  rate_limiter.ml
lib/exchange/curve/: cfg.ml  curve.ml  dune  pool_adapter.ml  rest.ml  types.ml
lib/exchange/defillama/: defillama.ml  dune
lib/exchange/dydx/: cfg.ml  common.ml  dune  dydx.ml  fluxum_adapter.ml  ledger.ml  order_book.ml  rest.ml  session.ml  unified_adapter.ml  ws.ml
lib/exchange/gateio/: cfg.ml  dune  fluxum_adapter.ml  gateio.ml  pool_adapter.ml  rest.ml  types.ml
lib/exchange/gemini/: auth.ml  cfg.ml  common.ml  concurrent_map.ml  csv_support.ml  dune  fluxum_adapter.ml  gemini.ml  gemini.mli  inf_pipe.ml  json.ml  ledger.ml  market_data.ml  market_data.mli  market_data_curl.ml  nonce.ml  order_book.ml  order_book.mli  order_events.ml  order_events.mli  order_tracker.ml  path.ml  pipe_ext.ml  poly_ok.ml  prediction_markets.ml  prediction_markets.mli  rest.ml  rest.mli  session.ml  symbols.ml  unified_adapter.ml  v1.ml  ws.ml
lib/exchange/gmx/: cfg.ml  dune  gmx.ml  pool_adapter.ml  rest.ml  types.ml
lib/exchange/htx/: cfg.ml  dune  htx.ml  pool_adapter.ml  rest.ml  types.ml
lib/exchange/hyperliquid/: cfg.ml  dune  fluxum_adapter.ml  hyperliquid.ml  ledger.ml  market_data.ml  order_book.ml  rest.ml  session.ml  signing.ml  unified_adapter.ml  ws.ml
lib/exchange/jupiter/: cfg.ml  dune  fluxum_adapter.ml  jupiter.ml  ledger.ml  order_book.ml  rest.ml  session.ml  unified_adapter.ml
lib/exchange/kalshi/: auth.ml  cfg.ml  dune  fluxum_adapter.ml  kalshi.ml  prediction_markets.ml
lib/feed_only_adapter/: aggregate_feed.ml  aggregate_feed.mli  dune  feed_only_adapter.ml  feed_only_adapter.mli  spot_feed.ml  spot_feed.mli
lib/microstructure/: dune  liquidity.ml  liquidity.mli  microstructure.ml  ofi.ml  ofi.mli  order_flow.ml  order_flow.mli  pm_quality_gates.ml  pm_quality_gates.mli  spread.ml  spread.mli
lib/prediction_analysis/: arbitrage.ml  arbitrage.mli  calibration.ml  calibration.mli  dune  prediction_analysis.ml  probability.ml  probability.mli
lib/solana/: base58.ml  base58.mli  dune  executor.ml  executor.mli  jupiter.ml  jupiter.mli  keypair.ml  keypair.mli  solana_rpc.ml  solana_rpc.mli  transaction.ml  transaction.mli
lib/test/: dune  run_normalize_common_tests.ml  test_account_types.ml  test_balance.ml  test_consolidated_order_book.ml  test_order_book_incremental.ml.bak  test_order_book_incremental.ml.disabled  test_websocket_curl.ml
lib/unified_ledger/: dune  entry.ml  ledger.ml
(+293 files in other folders)
