(library
 (name fluxum)
 (public_name fluxum)
 (modules :standard \ websocket_curl curl_ext consolidated_order_book consolidated_balance pool_intf amm_pricing consolidated_pools pool_common ws_health)
 (libraries core async csvfields yojson)
 (preprocess (pps ppx_jane ppx_deriving_yojson))
 (flags :standard -open Core -open Async))

(library
 (name pool_common)
 (public_name fluxum.pool_common)
 (modules pool_common)
 (libraries core fluxum pool_intf)
 (preprocess (pps ppx_jane))
 (flags :standard -open Core))

(library
 (name pool_intf)
 (public_name fluxum.pool_intf)
 (modules pool_intf)
 (libraries core async)
 (preprocess (pps ppx_jane))
 (flags :standard -open Core))

(library
 (name amm_pricing)
 (public_name fluxum.amm_pricing)
 (modules amm_pricing)
 (libraries core async pool_intf fluxum)
 (preprocess (pps ppx_jane))
 (flags :standard -open Core))

(library
 (name consolidated_pools)
 (public_name fluxum.consolidated_pools)
 (modules consolidated_pools)
 (libraries core pool_intf amm_pricing)
 (preprocess (pps ppx_jane))
 (flags :standard -open Core))

(library
 (name curl_ext)
 (public_name fluxum.curl_ext)
 (modules curl_ext)
 (libraries curl)
 (foreign_stubs
  (language c)
  (names curl_ext_stubs)
  (flags -I/usr/include -fPIC))
 (c_library_flags (-lcurl)))

(library
 (name websocket_curl)
 (public_name fluxum.websocket_curl)
 (modules websocket_curl)
 (libraries core async curl curl_ext uri base64 digestif)
 (preprocess (pps ppx_jane)))

(library
 (name ws_health)
 (public_name fluxum.ws_health)
 (modules ws_health)
 (libraries core async)
 (preprocess (pps ppx_jane))
 (flags :standard -open Core -open Async))

(library
 (name consolidated_order_book)
 (public_name fluxum.consolidated_order_book)
 (modules consolidated_order_book)
 (libraries core async fluxum gemini kraken hyperliquid bitrue binance coinbase mexc bybit okx)
 (preprocess (pps ppx_jane))
 (flags :standard -open Core -open Async))

(library
 (name consolidated_balance)
 (public_name fluxum.consolidated_balance)
 (modules consolidated_balance)
 (libraries core async fluxum gemini kraken mexc binance coinbase bitrue)
 (preprocess (pps ppx_jane))
 (flags :standard -open Core -open Async))

