(library
 (name binance)
 (modules cfg common signature rest v3 ws order_book market_data binance)
 (libraries core async cohttp cohttp-async fluxum exchange_common yojson cohttp_async_websocket websocket_curl uri digestif)
 (preprocess (pps ppx_jane ppx_deriving_yojson))
 (flags :standard -open Core -open Async)
 (library_flags -linkall))
