(library
  (name gemini)
  (public_name fluxum.gemini)
  (flags
    :standard -w -39
    -open Core
    -open Async
  )
  (preprocess (pps ppx_jane ppx_deriving_yojson ppx_csv_conv ppx_make))
  (synopsis "Gemini REST Client for OCaml")
  (library_flags -linkall)
  (libraries
              async
              core_unix.command_unix
              cohttp
              cohttp-async
              csvfields
              ppx_csv_conv
              logs
              uri
              yojson
              zarith
              mirage-crypto
              digestif
              hex
              cstruct
              base64
              websocket_curl
              fluxum
              exchange_common
  )
)
