(library
 (name hyperliquid)
 (modules cfg rest ws market_data order_book fluxum_adapter hyperliquid)
 (libraries core async fluxum exchange_common yojson uri cohttp-async cohttp_async_websocket websocket_curl)
 (preprocess (pps ppx_jane ppx_deriving_yojson))
 (flags :standard -open Core -open Async))
