(library
 (name kraken)
 (modules cfg signature v1)
 (libraries core async fluxum yojson digestif base64 hex)
 (flags :standard -open Core -open Async)
)

(executable
 (name signature_test)
 (public_name kraken_signature_test)
 (modules signature_test)
 (libraries core kraken)
 (flags :standard -open Core)
)