(library
 (name kraken)
 (modules cfg signature common rest v1 order kraken ws ws_cmd market_data order_book ledger session unified_adapter unified_cmd)
 (libraries core async fluxum gemini yojson digestif base64 hex websocket_curl uri cohttp-async)
 (preprocess (pps ppx_jane ppx_deriving_yojson))
 (flags :standard -open Core -open Async)
)