(library
 (name kucoin)
 (public_name fluxum.kucoin)
 (libraries
  core
  core_unix.uuid
  core_unix.command_unix
  async
  cohttp
  cohttp-async
  cryptokit
  yojson
  ppx_deriving_yojson.runtime
  fluxum
  exchange_common
  pool_intf
  amm_pricing
  pool_common)
 (preprocess
  (pps ppx_jane ppx_deriving_yojson))
 (flags :standard -open Core -open Async))
