(library
 (name oneinch)
 (public_name fluxum.oneinch)
 (modules cfg rest order_book ledger session unified_adapter fluxum_adapter oneinch)
 (libraries core async cohttp-async yojson ppx_deriving_yojson.runtime exchange_common fluxum)
 (preprocess (pps ppx_jane ppx_deriving_yojson))
 (flags :standard -open Core -open Async))
