(library
 (name uniswapv3)
 (public_name fluxum.uniswapv3)
 (modules cfg types rest pool_adapter order_book ledger session fluxum_adapter unified_adapter uniswapv3)
 (libraries core async cohttp cohttp-async yojson ppx_deriving_yojson.runtime fluxum pool_intf amm_pricing pool_common exchange_common)
 (preprocess (pps ppx_jane ppx_deriving_yojson))
 (flags :standard -open Core -open Async))
