(test
 (name run_tests)
 (modules run_tests)
 (libraries core binance fluxum)
 (preprocess (pps ppx_jane))
 (flags :standard -open Core))

(executable
 (name integration_tests)
 (modules integration_tests)
 (libraries core async binance fluxum integration_test_framework)
 (preprocess (pps ppx_jane))
 (flags :standard -open Core -open Async))
