(test
 (name run_tests)
 (modules run_tests)
 (libraries core coinbase fluxum)
 (preprocess (pps ppx_jane))
 (flags :standard -open Core))

; Integration tests - run manually with: dune exec ./lib/exchange/coinbase/test/integration_test.exe
(executable
 (name integration_test)
 (modules integration_test)
 (libraries core async cohttp-async yojson coinbase fluxum)
 (preprocess (pps ppx_jane))
 (flags :standard -open Core -open Async))
