; Unit tests - run with: dune exec ./lib/exchange/gemini/test/run_tests.exe
(executable
 (name run_tests)
 (modules run_tests)
 (libraries core gemini fluxum)
 (preprocess (pps ppx_jane))
 (flags :standard -open Core))

; Account operations tests - run with: dune exec ./lib/exchange/gemini/test/test_account_ops.exe
(test
 (name test_account_ops)
 (modules test_account_ops)
 (libraries core yojson gemini fluxum)
 (preprocess (pps ppx_jane))
 (flags :standard -open Core))

; Integration tests - run manually with: dune exec ./lib/exchange/gemini/test/integration_test.exe
(executable
 (name integration_test)
 (modules integration_test)
 (libraries core async cohttp-async yojson gemini fluxum)
 (preprocess (pps ppx_jane))
 (flags :standard -open Core -open Async))
