(test
 (name run_tests)
 (modules run_tests)
 (libraries core kraken fluxum)
 (preprocess (pps ppx_jane))
 (flags :standard -open Core))

; Integration tests - run manually with: dune exec ./lib/exchange/kraken/test/integration_test.exe
(executable
 (name integration_test)
 (modules integration_test)
 (libraries core async kraken fluxum)
 (preprocess (pps ppx_jane))
 (flags :standard -open Core -open Async))
