; Comprehensive unit tests for OKX unified adapter
; Run with: dune runtest lib/exchange/okx/test
(test
 (name run_tests)
 (modules run_tests)
 (libraries core okx fluxum)
 (preprocess (pps ppx_jane))
 (flags :standard -open Core))

; Account operations tests (deposits/withdrawals)
; Run with: dune build @lib/exchange/okx/test/runtest
(test
 (name test_account_ops)
 (modules test_account_ops)
 (libraries core okx fluxum)
 (preprocess (pps ppx_jane))
 (flags :standard -open Core))
